Revision history for {{$dist->name}}

{{$NEXT}}

2.09      2019-02-11 14:32:15 -0500
  - updated my dists to latest
  - Remove FFI-Build as it is now part of FFI-Platypus
  - Added Alien::Librdkafka
  - Added Kafka::Librd
  - Added WebService::DailyConnect
  - FFI is now installed on more platforms as it relies
    on FFI-PLatypus instead of ffcall now

2.08      2018-12-27 15:06:53 -0500
  - updated my dists to latest
  - Remove Dist::Zilla::Plugin::FFI::CheckLib
    (now part of Dist::Zilla::Plugin::FFI)

2.07      2018-08-23 14:55:34 -0400
  - Add NewRelic::Agent::FFI
  - Add Alien::nragent
  - Add Dist::Zilla::Plugin::FFI::CheckLib
  - updated my dists to latest

2.06      2018-08-10 07:37:43 -0400
  - Remove Term::Clui on MSWin32 only
  - Added Dist::Zilla::Plugin::FFI
  - Added FFI::Build
  - updated my dists to latest
  - Remove Alien::libtool24

2.05      2018-06-25 17:00:53 -0400
  - Updated my dists to latest
  - Add Term::Clui

2.04      2018-06-19 17:03:56 -0600
  - Updated my dists to latest
  - Add FFI::TinyCC::Inline
  - Add Test2::Tools::HTTP
  - Add Test2::Tools::HTTP::UA::Mojo

2.03      2018-05-21 09:46:22 -0400
  - Updated my dists to latest
  - add App::Prove::Plugin::TermTable
  - add Test2::Tools::JSON::Pointer

2.02      2018-05-08 07:11:52 -0400
  - Updated my dists to latest

2.01      2018-03-24 19:30:48 -0400
  - updated my dists to latest
  - remove PlugAuth::Plugin::Finger (deprecated)
  - remove PlugAuth::Plugin::DBIAuth (deprecated)
  - remove PlugAuth::Plugin::AuthenSimple (deprecated)
  - remove Test::Clustericious::Blocking (deprecated)
  - remove Test::Clustericious::Cluster (deprecated)
  - remove PlugAuth (deprecated)
  - remove PlugAuth::Plugin::LDAP (deprecated)
  - remove PlugAuth::Client::Tiny::Apache2AuthenHandler
  - remove PlugAuth::Client::Tiny::Apache2AuthzHandler
  - remove Clustericious (deprecated)
  - remove Clustericious::Admin (deprecated)
  - remove Clustericious::Coder::BSON