@@ -78,6 +78,7 @@ comes with this distribution for details.
 - App::pwhich
 - App::RegexFileUtils
 - App::spaceless
+- App::whichdll
 - Archive::Ar::Libarchive
 - Archive::Libarchive::Any
 - Archive::Libarchive::FFI
@@ -114,6 +115,7 @@ comes with this distribution for details.
 - FFI::Platypus::Lang::Fortran
 - FFI::Platypus::Lang::Pascal
 - FFI::Platypus::Lang::Rust
+- FFI::Platypus::Legacy::Raw
 - FFI::Platypus::Type::StringArray
 - FFI::TinyCC
 - FFI::TinyCC::Inline
@@ -149,6 +151,7 @@ comes with this distribution for details.
 - Term::Clui
 - Term::EditLine
 - Test2::Plugin::FauxHomeDir
+- Test2::Tools::FFI
 - Test2::Tools::HTTP
 - Test2::Tools::HTTP::UA::Mojo
 - Test2::Tools::JSON::Pointer
