@@ -65,9 +65,10 @@ Alien::pkgconf                                 = 0.15
 Alien::Role::Alt                               = 0.04
 Alien::Role::Dino                              = 0.06
 Alien::xz                                      = 0.06
-;Alt::Alien::cmake::System
+;Alt::Alien::cmake::System                     = 0.0402
 ;Alt::Alien::FFI::System                       = 0.21
 ;Alt::ExtUtils::PkgConfig::PLICEASE            = 1.15
+;Alt::FFI::Raw::FFI                            = 0.02
 AnyEvent::Finger                               = 0.10
 AnyEvent::FTP                                  = 0.16
 AnyEvent::Ident                                = 0.07
@@ -80,6 +81,7 @@ App::Prove::Plugin::TermTableStty              = 0.01
 App::pwhich                                    = 1.16
 App::RegexFileUtils                            = 0.08
 App::spaceless                                 = 0.07
+App::whichdll                                  = 0.02
 Archive::Ar::Libarchive                        = 2.07
 Archive::Libarchive::Any                       = 0.0900
 Archive::Libarchive::FFI                       = 0.0901
@@ -91,7 +93,7 @@ Dist::Zilla::Plugin::Alt                       = 0.07
 Dist::Zilla::Plugin::Author::Plicease          = 2.33
 Dist::Zilla::Plugin::CommentOut                = 0.01
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
-Dist::Zilla::Plugin::FFI                       = 1.02
+Dist::Zilla::Plugin::FFI                       = 1.03
 Dist::Zilla::Plugin::InsertExample             = 0.09
 Dist::Zilla::Plugin::JavaScript::Minifier      = 0.02
 Dist::Zilla::Plugin::MathInt64                 = 0.10
@@ -103,12 +105,13 @@ Env::ShellWords                                = 0.02
 FFI                                            = 1.14
 FFI::CheckLib                                  = 0.23
 FFI::ExtractSymbols                            = 0.03
-FFI::Platypus                                  = 0.82
+FFI::Platypus                                  = 0.84
 FFI::Platypus::Lang::CPP                       = 0.04
 FFI::Platypus::Lang::CPP::Demangle::XS         = 0.03
 FFI::Platypus::Lang::Fortran                   = 0.09
 FFI::Platypus::Lang::Pascal                    = 0.06
 FFI::Platypus::Lang::Rust                      = 0.05
+FFI::Platypus::Legacy::Raw                     = 0.02
 FFI::Platypus::Type::StringArray               = 0.02
 FFI::TinyCC                                    = 0.28
 FFI::TinyCC::Inline                            = 0.28
@@ -140,6 +143,7 @@ Test::Fixme                                    = 0.16
 Test::Script                                   = 1.25
 Test::Version                                  = 2.09
 Test2::Plugin::FauxHomeDir                     = 0.04
+Test2::Tools::FFI                              = 0.04
 Test2::Tools::HTTP                             = 0.08
 Test2::Tools::HTTP::UA::Mojo                   = 0.03
 Test2::Tools::JSON::Pointer                    = 0.01
